[fix] overflow issue + remove italic title styling

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,6 +23,7 @@
     min-width: 760px;
     max-width: 1000px;
     height: 100%;
+    overflow: hidden;
   }
 
   .game-board-container {
