--- a/src/app/components/header-bar/header-bar.component.scss
+++ b/src/app/components/header-bar/header-bar.component.scss
@@ -17,7 +17,6 @@
   width: 100%;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
-  font-style: italic;
   z-index: 1;
   background-color: #333;
 
